force-app/main/objects/Signup_Form_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Campaign_ID__c</fullName>
        <label>Form Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadInfoEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadInfoEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Form_Name__c</fullName>
        <label>Marketing Cloud Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Host__c</fullName>
        <label>Result Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Page__c</fullName>
        <label>Request Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Page__c</fullName>
        <label>Result Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Signup Form Settings</label>
</CustomObject>